--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ winproject/plugin
 /winproject/mupen64.cache
 /winproject/debugview.ini
 /winproject/mupen64/mupen64_2017.vcxproj.user
+*.rej
+/patches
