--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -417,6 +417,7 @@ FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
     LISTBOX         IDC_HOTKEY_LIST,6,24,216,210,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Assign...",IDC_HOTKEY_ASSIGN_SELECTED,6,240,54,14
+    PUSHBUTTON      "Clear Hotkey",IDC_HOTKEY_CLEAR,6,254,54,14
     EDITTEXT        IDC_SELECTED_HOTKEY_TEXT,66,240,156,14,ES_AUTOHSCROLL | ES_READONLY
     EDITTEXT        IDC_HOTKEY_SEARCH,6,6,216,14,ES_AUTOHSCROLL
 END
