--- a/.editorconfig
+++ b/.editorconfig
@@ -11,7 +11,7 @@ tab_width = 4
 end_of_line = crlf
 charset = utf-8
 trim_trailing_whitespace = true
-
+insert_final_newline = true
 
 # Visual C++ Code Style settings
 
