Add remaining, uncommited changes

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -297,7 +297,7 @@ FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
     GROUPBOX        "ROM Directories:",IDC_ROMS_DIRECTORIES,6,6,216,90
     CONTROL         "Use Directory recursion",IDC_RECURSION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,18,138,8
-    LISTBOX         IDC_ROMBROWSER_DIR_LIST,12,30,144,60,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_ROMBROWSER_DIR_LIST,12,30,144,60,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "&Add...",IDC_ADD_BROWSER_DIR,162,30,54,12
     PUSHBUTTON      "&Remove",IDC_REMOVE_BROWSER_DIR,162,42,54,12
     PUSHBUTTON      "&Remove All",IDC_REMOVE_BROWSER_ALL,162,78,54,12
