Remove rarely used settings and simplify some program flow

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -214,31 +214,20 @@ BEGIN
 END
 
 IDD_ADVANCED_OPTIONS DIALOGEX 0, 0, 231, 273
-STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    GROUPBOX        "Common Options",IDC_COMMON,6,6,216,60
-    CONTROL         "LUA Double Buffer",IDC_CLUADOUBLEBUFFER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,120,96,8
+    CONTROL         "LUA Double Buffer",IDC_CLUADOUBLEBUFFER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,78,96,8
     CONTROL         "Pause emulation when window is not active",IDC_PAUSENOTACTIVE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,42,114,8
-    CONTROL         "Show toolbar",IDC_GUI_TOOLBAR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,138,18,76,8
-    CONTROL         "Show statusbar",IDC_GUI_STATUSBAR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,138,30,76,10
-    GROUPBOX        "Compatibility Options",IDC_COMPATIBILITY,7,71,215,73
-    CONTROL         "No audio delay",IDC_NO_AUDIO_DELAY,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,84,96,10
-    CONTROL         "No compiled jump",IDC_NO_COMPILED_JUMP,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,96,96,8
-    CONTROL         "Emulate float crashes",IDC_EMULATEFLOATCRASHES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,108,96,8
-    GROUPBOX        "ROM Browser Columns",IDC_ROMBROWSERCOLUMNS,7,146,215,73
-    CONTROL         "Good Name",IDC_COLUMN_GOODNAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,156,84,11
-    CONTROL         "Internal Name",IDC_COLUMN_INTERNALNAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,168,84,9
-    CONTROL         "Country",IDC_COLUMN_COUNTRY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,180,84,8
-    CONTROL         "Size",IDC_COLUMN_SIZE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,192,84,8
-    CONTROL         "Comments",IDC_COLUMN_COMMENTS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,204,72,8
-    CONTROL         "File Name",IDC_COLUMN_FILENAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,138,156,78,8
-    CONTROL         "MD5",IDC_COLUMN_MD5,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,138,168,78,8
-    CONTROL         "WiiVC Rounding",IDC_ROUNDTOZERO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,138,84,72,10
-    GROUPBOX        "Recording Options",IDC_RECORDINGOPT,6,222,216,36
-    CONTROL         "Record resets",IDC_NORESET,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,234,114,8
-    CONTROL         "Force internal avi capture",IDC_FORCEINTERNAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,246,114,8
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,12,210,8
+    GROUPBOX        "Compatibility Options",IDC_COMPATIBILITY,6,30,215,78
+    CONTROL         "No audio delay",IDC_NO_AUDIO_DELAY,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,42,96,10
+    CONTROL         "No compiled jump",IDC_NO_COMPILED_JUMP,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,54,96,8
+    CONTROL         "Emulate float crashes",IDC_EMULATEFLOATCRASHES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,66,96,8
+    CONTROL         "WiiVC Rounding",IDC_ROUNDTOZERO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,90,96,10
+    GROUPBOX        "Recording Options",IDC_RECORDINGOPT,6,114,216,144
+    CONTROL         "Record resets",IDC_NORESET,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,126,114,8
+    CONTROL         "Force internal avi capture",IDC_FORCEINTERNAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,138,114,8
 END
 
 IDD_OTHER_OPTIONS_DIALOG DIALOGEX 0, 0, 231, 273
@@ -444,7 +433,7 @@ BEGIN
 END
 
 IDD_MESSAGES DIALOGEX 0, 0, 231, 262
-STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
     GROUPBOX        "Alerts",IDC_MESSAGES,6,6,216,42
@@ -452,18 +441,15 @@ BEGIN
     CONTROL         "Alert for save errors",IDC_ALERTSAVESTATEWARNINGS,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,132,18,84,8
     GROUPBOX        "FPS / VIs",IDC_FPSTITLE,6,54,215,96
-    CONTROL         "Limit VIs (auto)",IDC_LIMITFPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,67,204,8
-    CONTROL         "Show FPS",IDC_SHOWFPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,132,108,78,8
-    CONTROL         "Show VIs",IDC_SHOWVIS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,132,120,78,8
-    GROUPBOX        "CPU Core",IDC_CPUCORE,6,156,216,48
+    CONTROL         "Show FPS",IDC_SHOWFPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,66,78,8
+    CONTROL         "Show VIs",IDC_SHOWVIS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,78,78,8
+    GROUPBOX        "CPU Core",IDC_CPUCORE,6,156,216,96
     CONTROL         "Interpreter",IDC_INTERP,"Button",BS_AUTORADIOBUTTON,12,168,204,8
     CONTROL         "Dynamic Recompiler",IDC_RECOMP,"Button",BS_AUTORADIOBUTTON,12,180,204,8
     CONTROL         "Pure Interpreter",IDC_PURE_INTERP,"Button",BS_AUTORADIOBUTTON,12,192,204,8
-    EDITTEXT        IDC_SKIPFREQ,114,132,78,12,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "Fast forward skip frequency:",IDC_FASTFORWARDSKIPFREQ,12,132,96,12,SS_CENTERIMAGE
-    CONTROL         "0-index statusbar",IDC_0INDEX,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,108,75,8
-    CONTROL         "",IDC_FPSTRACKBAR,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,24,91,192,12
-    PUSHBUTTON      "?",IDC_SKIPFREQUENCY_HELP,198,132,14,12
+    EDITTEXT        IDC_SKIPFREQ,114,90,78,12,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Fast forward skip frequency:",IDC_FASTFORWARDSKIPFREQ,12,90,96,12,SS_CENTERIMAGE
+    PUSHBUTTON      "?",IDC_SKIPFREQUENCY_HELP,198,90,14,12
     CONTROL         "State-independent savestate loading",IDC_ALLOW_ARBITRARY_SAVESTATE_LOADING,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,30,128,8
 END
