Simplify some settings pages, fix speed modifier saving

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -151,11 +151,6 @@ BEGIN
     END
     POPUP "Utilities"
     BEGIN
-        MENUITEM "Rom Properties...\tCtrl P",   ID_POPUP_ROM_SETTING, GRAYED
-        MENUITEM SEPARATOR
-        MENUITEM "&Audit ROMs...",              ID_AUDIT_ROMS
-        MENUITEM "&Generate ROM Info...",       ID_GENERATE_ROM_INFO
-        MENUITEM SEPARATOR
         MENUITEM "Start &Trace Logger...",      ID_TRACELOG
         MENUITEM "Save Config",                 ID_FORCESAVE
         MENUITEM "Game Debugger",               ID_GAMEDEBUGGER
@@ -281,29 +276,28 @@ BEGIN
 END
 
 IDD_DIRECTORIES DIALOGEX 0, 0, 231, 262
-STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    GROUPBOX        "ROM Directories:",IDC_ROMS_DIRECTORIES,6,6,216,90
-    CONTROL         "Use Directory recursion",IDC_RECURSION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,18,138,8
+    GROUPBOX        "Rombrowser",IDC_ROMS_DIRECTORIES,6,6,216,90
+    CONTROL         "Search recursively",IDC_RECURSION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,18,138,8
     LISTBOX         IDC_ROMBROWSER_DIR_LIST,12,30,144,60,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "&Add...",IDC_ADD_BROWSER_DIR,162,30,54,12
     PUSHBUTTON      "&Remove",IDC_REMOVE_BROWSER_DIR,162,42,54,12
-    PUSHBUTTON      "&Remove All",IDC_REMOVE_BROWSER_ALL,162,78,54,12
-    GROUPBOX        "Plugins Directory:",IDC_PLUGINS_GROUP,6,102,216,42
-    GROUPBOX        "Screen Shots Directory:",IDC_SCREENSHOTS_GROUP,6,198,216,42
-    EDITTEXT        IDC_PLUGINS_DIR,12,126,144,12,ES_AUTOHSCROLL
-    PUSHBUTTON      "Browse...",IDC_CHOOSE_PLUGINS_DIR,162,126,54,12
-    EDITTEXT        IDC_SCREENSHOTS_DIR,12,222,144,12,ES_AUTOHSCROLL
-    PUSHBUTTON      "Browse...",IDC_CHOOSE_SCREENSHOTS_DIR,162,222,54,12
-    CONTROL         "Use Default (/plugin)",IDC_DEFAULT_PLUGINS_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,114,84,10
-    GROUPBOX        "Saves Directory:",IDC_SAVES_GROUP,6,150,216,42
-    EDITTEXT        IDC_SAVES_DIR,12,174,144,12,ES_AUTOHSCROLL
+    PUSHBUTTON      "Clear",IDC_REMOVE_BROWSER_ALL,162,78,54,12
+    GROUPBOX        "",IDC_PLUGINS_GROUP,6,102,216,30
+    GROUPBOX        "",IDC_SCREENSHOTS_GROUP,6,174,216,30
+    EDITTEXT        IDC_PLUGINS_DIR,12,114,144,12,ES_AUTOHSCROLL
+    PUSHBUTTON      "Browse...",IDC_CHOOSE_PLUGINS_DIR,162,114,54,12
+    EDITTEXT        IDC_SCREENSHOTS_DIR,12,186,144,12,ES_AUTOHSCROLL
+    PUSHBUTTON      "Browse...",IDC_CHOOSE_SCREENSHOTS_DIR,162,186,54,12
+    CONTROL         "Use Default (/plugin)",IDC_DEFAULT_PLUGINS_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,102,204,10
+    GROUPBOX        "",IDC_SAVES_GROUP,6,138,216,30
+    EDITTEXT        IDC_SAVES_DIR,12,150,144,12,ES_AUTOHSCROLL
     CONTROL         "Use default (/screenshots)",IDC_DEFAULT_SCREENSHOTS_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,210,200,10
-    PUSHBUTTON      "Browse...",IDC_CHOOSE_SAVES_DIR,162,174,54,12
-    CONTROL         "Use default (/save)",IDC_DEFAULT_SAVES_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,162,204,8
-    PUSHBUTTON      "?",IDC_PLUGIN_DIRECTORY_HELP,198,108,18,18
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,174,204,10
+    PUSHBUTTON      "Browse...",IDC_CHOOSE_SAVES_DIR,162,150,54,12
+    CONTROL         "Use default (/save)",IDC_DEFAULT_SAVES_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,138,204,8
 END
 
 IDD_HOTKEY_CONFIG DIALOGEX 0, 0, 231, 262
@@ -403,25 +397,25 @@ BEGIN
 END
 
 IDD_MAIN DIALOGEX 0, 0, 231, 262
-STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    GROUPBOX        "GFX  Plugin",IDC_GFXPLUGIN,6,6,215,53
+    GROUPBOX        "Video",IDC_GFXPLUGIN,6,6,215,53
     COMBOBOX        IDC_COMBO_GFX,54,18,156,100,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Config",IDGFXCONFIG,54,36,48,15
     PUSHBUTTON      "Test",IDGFXTEST,108,36,48,15
     PUSHBUTTON      "About",IDGFXABOUT,162,36,48,15
-    GROUPBOX        "Input Plugin",IDC_INPUTPLUGIN,6,66,215,53
+    GROUPBOX        "Input",IDC_INPUTPLUGIN,6,66,215,53
     COMBOBOX        IDC_COMBO_INPUT,54,78,156,100,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Config",IDINPUTCONFIG,54,96,48,15
     PUSHBUTTON      "Test",IDINPUTTEST,108,96,48,15
     PUSHBUTTON      "About",IDINPUTABOUT,162,96,48,15
-    GROUPBOX        "Sound Plugin",IDC_SOUNDPLUGIN,6,126,215,53
+    GROUPBOX        "Audio",IDC_SOUNDPLUGIN,6,126,215,53
     COMBOBOX        IDC_COMBO_SOUND,54,138,156,100,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Config",IDSOUNDCONFIG,54,156,48,15
     PUSHBUTTON      "Test",IDSOUNDTEST,108,156,48,15
     PUSHBUTTON      "About",IDSOUNDABOUT,162,156,48,15
-    GROUPBOX        "RSP Plugin",IDC_RSPPLUGIN,6,186,215,53
+    GROUPBOX        "RSP",IDC_RSPPLUGIN,6,186,215,53
     COMBOBOX        IDC_COMBO_RSP,54,198,156,100,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Config",IDRSPCONFIG,54,216,48,15
     PUSHBUTTON      "Test",IDRSPTEST,108,216,48,15
@@ -437,21 +431,20 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
     GROUPBOX        "Alerts",IDC_MESSAGES,6,6,216,42
-    CONTROL         "Manage Bad ROMs",IDC_MANAGEBADROM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,18,90,8
-    CONTROL         "Alert for save errors",IDC_ALERTSAVESTATEWARNINGS,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,132,18,84,8
-    GROUPBOX        "FPS / VIs",IDC_FPSTITLE,6,54,215,96
+    CONTROL         "Manage Bad ROMs",IDC_MANAGEBADROM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,18,96,8
+    CONTROL         "Alert save errors",IDC_ALERTSAVESTATEWARNINGS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,132,18,84,8
+    GROUPBOX        "FPS / VIs",IDC_FPSTITLE,6,54,215,54
     CONTROL         "Show FPS",IDC_SHOWFPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,66,78,8
     CONTROL         "Show VIs",IDC_SHOWVIS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,78,78,8
-    GROUPBOX        "CPU Core",IDC_CPUCORE,6,156,216,96
-    CONTROL         "Interpreter",IDC_INTERP,"Button",BS_AUTORADIOBUTTON,12,168,204,8
-    CONTROL         "Dynamic Recompiler",IDC_RECOMP,"Button",BS_AUTORADIOBUTTON,12,180,204,8
-    CONTROL         "Pure Interpreter",IDC_PURE_INTERP,"Button",BS_AUTORADIOBUTTON,12,192,204,8
+    GROUPBOX        "CPU Core",IDC_CPUCORE,6,114,216,54
+    CONTROL         "Interpreter",IDC_INTERP,"Button",BS_AUTORADIOBUTTON,12,126,204,8
+    CONTROL         "Dynamic Recompiler",IDC_RECOMP,"Button",BS_AUTORADIOBUTTON,12,138,204,8
+    CONTROL         "Pure Interpreter",IDC_PURE_INTERP,"Button",BS_AUTORADIOBUTTON,12,150,204,8
     EDITTEXT        IDC_SKIPFREQ,114,90,78,12,ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "Fast forward skip frequency:",IDC_FASTFORWARDSKIPFREQ,12,90,96,12,SS_CENTERIMAGE
     PUSHBUTTON      "?",IDC_SKIPFREQUENCY_HELP,198,90,14,12
     CONTROL         "State-independent savestate loading",IDC_ALLOW_ARBITRARY_SAVESTATE_LOADING,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,30,128,8
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,30,138,8
 END
 
 IDD_MOVIE_PLAYBACK_DIALOG DIALOGEX 0, 0, 342, 342
@@ -634,12 +627,12 @@ END
 
 IDD_MUPENERROR DIALOGEX 0, 0, 341, 90
 STYLE DS_SETFONT | DS_MODALFRAME | DS_SETFOREGROUND | DS_FIXEDSYS | WS_POPUP | WS_CAPTION
-CAPTION "Mupen64 Error"
+CAPTION "Error"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     PUSHBUTTON      "Exit",IDC_ERROR_PANIC_CLOSE,276,72,60,12
     PUSHBUTTON      "Ignore",IDC_ERROR_PANIC_IGNORE,216,72,60,12
-    LTEXT           "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vulputate ut pharetra sit amet aliquam id diam maecenas ultricies. Accumsan sit amet nulla facilisi morbi tempus. Et ultrices neque",IDC_ERRORTEXT,102,6,234,24
+    LTEXT           "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vulputate ut pharetra sit amet aliquam id diam maecenas ultricies. Accumsan sit amet nulla facilisi morbi tempus. Et ultrices neque",IDC_ERRORTEXT,102,6,234,60
     CONTROL         "",IDC_ERROR_PICTUREBOX,"Static",SS_OWNERDRAW,6,6,42,36
 END
 
@@ -906,7 +899,7 @@ END
 
 STRINGTABLE
 BEGIN
-    ID_START_CAPTURE_PRESET "Starts AVI capture with previous codec and preset (avi.cfg)"
+    ID_START_RECORD         "Starts AVI capture with previous codec and preset (avi.cfg)"
 END
 
 #endif    // Neutral (Default) resources
